--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "olivevoice-app",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.378.0",
+    "next": "^14.2.33",
+    "openai": "^4.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.0.0"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
