--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "olivevoice-app",
   "version": "2.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.378.0",
     "next": "^14.2.33",
